force-app/main/default/objects/Producto_de_Internacion__c/Producto_de_Internacion__c.object-meta.xml
<CustomObject>
    <label>Producto de Internación</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Producto de Internacion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos de internaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>