force-app/main/default/objects/Producto_de_Internacion__c/fields/Bypass_apex__c.field-meta.xml
<CustomField>
    <fullName>Bypass_apex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass apex</label>
    <type>Checkbox</type>
</CustomField>