force-app/main/default/objects/Producto_de_Internacion__c/fields/Cantidad_diaria__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_diaria__c</fullName>
    <label>Cantidad diaria</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>