force-app/main/default/objects/Producto_de_Internacion__c/fields/Cantidad_total__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_total__c</fullName>
    <formula>Cantidad_diaria__c  *  Dias_total_producto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>