force-app/main/default/objects/Producto_de_Internacion__c/fields/Dias_total_producto__c.field-meta.xml
<CustomField>
    <fullName>Dias_total_producto__c</fullName>
    <formula>Fecha_Fin_Producto__c - Fecha_Inicio_Producto__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días total producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>