force-app/main/default/objects/Producto_de_Internacion__c/fields/Fecha_Fin_Producto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_Producto__c</fullName>
    <label>Fecha Fin Producto</label>
    <type>Date</type>
</CustomField>