force-app/main/default/objects/Producto_de_Internacion__c/fields/Fecha_Inicio_Producto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Producto__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha Inicio Producto</label>
    <type>Date</type>
</CustomField>