force-app/main/default/objects/Producto_de_Internacion__c/fields/Internacion__c.field-meta.xml
<CustomField>
    <fullName>Internacion__c</fullName>
    <label>Internacion</label>
    <referenceTo>Internacion__c</referenceTo>
    <relationshipLabel>Productos de internacion</relationshipLabel>
    <relationshipName>Productos_de_internaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>