force-app/main/default/objects/Producto_de_Internacion__c/fields/Modulo_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Modulo_del_producto__c</fullName>
    <formula>Producto__r.Modulo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modulo del producto</label>
    <type>Text</type>
</CustomField>