force-app/main/default/objects/Producto_de_Internacion__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos de internaciones</relationshipLabel>
    <relationshipName>Productos_de_internaciones</relationshipName>
    <type>Lookup</type>
</CustomField>