force-app/main/default/objects/Producto_de_Internacion__c/validationRules/Producto_de_internacion_blockeado.validationRule-meta.xml
<ValidationRule>
    <fullName>Producto_de_internacion_blockeado</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
				AND( 
				NOT(ISBLANK(Internacion__r.Fecha_de_Fin_Internaci_n__c)),
				LastModifiedDate ==LastModifiedDate,
				Bypass_apex__c ==false
),
				AND(
					NOT(ISBLANK(Internacion__r.Fecha_de_Fin_Internaci_n__c)),
					Bypass_apex__c ==true,
			 	NOT(ISCHANGED(Bypass_apex__c))
				) 
)</errorConditionFormula>
    <errorMessage>No se pueden modificar los productos de una internación ya cerrada.</errorMessage>
</ValidationRule>